--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git@github.com:andrewmcdan/Companion-TheCube-BTManager.git
 [submodule "openwakeword"]
 	path = openwakeword
-	url = https://github.com/andrewmcdan/openwakeword
+	url = git@github.com:andrewmcdan/openwakeword.git
