ci: update SSL certificate generation script path in CI workflow

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,7 +13,9 @@ jobs:
       - name: Install dependencies
         run: sudo ./install-deps.sh
       - name: Create SSL certs
-        run: ./ssl/create-certs.sh
+        run: |
+          cd ssl
+          ./generateCert.sh
       - name: Configure
         run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Debug -DENABLE_TOOLING_SCRIPTS=OFF -DENABLE_BUILD_SERVER=OFF
       - name: Build
