fix: update CMake configuration to conditionally define BUILD_BT_MANAGER option

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Copy env file
         run: cp .env.example .env
       - name: Configure
-        run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Debug -DENABLE_TOOLING_SCRIPTS=OFF -DENABLE_BUILD_SERVER=OFF
+        run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Debug -DENABLE_TOOLING_SCRIPTS=OFF -DENABLE_BUILD_SERVER=OFF -DBUILD_BT_MANAGER=OFF
       - name: Build
         run: cmake --build build -j
       - name: Run tests
