fix: specify target for build step in CI workflow

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -24,6 +24,6 @@ jobs:
       - name: Configure
         run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Debug -DENABLE_TOOLING_SCRIPTS=OFF -DENABLE_BUILD_SERVER=OFF -DBUILD_BT_MANAGER=OFF
       - name: Build
-        run: cmake --build build -j
+        run: cmake --build build -j --target CubeCoreTests
       - name: Run tests
         run: ctest --test-dir build -C Debug -j
