--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -25,5 +25,6 @@ jobs:
         run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Debug -DENABLE_TOOLING_SCRIPTS=OFF -DENABLE_BUILD_SERVER=OFF -DBUILD_BT_MANAGER=OFF
       - name: Build
         run: cmake --build build -j --target CubeCoreTests
+        timeout-minutes: 10
       - name: Run tests
         run: ctest --test-dir build -C Debug -j
