fix: add environment variables and timeout to test job in CI workflow

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -8,6 +8,10 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
+    env:
+      CXX: g++
+      CC: gcc
     steps:
       - uses: actions/checkout@v4
         with:
