--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -16,6 +16,17 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+      - name: Cache build and dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            build
+            ~/.cache
+            ~/.ccache
+            ~/.cmake
+              key: ${{ runner.os }}-build-${{ hashFiles('**/CMakeLists.txt') }}-${{ hashFiles('**/*.cpp', '**/*.h') }}
+              restore-keys: |
+            ${{ runner.os }}-build-
       - name: Install dependencies
         run: sudo ./install-deps.sh
       - name: Create SSL certs
@@ -32,3 +43,4 @@ jobs:
         timeout-minutes: 10
       - name: Run tests
         run: ctest --test-dir build -C Debug -j
+      
